--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
+            <version>3.31.0</version>
         </dependency>
         <dependency>
             <groupId>com.atguigu.daijia</groupId>
